--- a/views/todoList.ejs
+++ b/views/todoList.ejs
@@ -17,6 +17,8 @@
         </p>
       </div>
   <%  }) %>
-
-
+  <form class="item" action="/todoadd" method="post">
+    <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+    <button class="item-btn"type="submit" name="list" value="<%= listTitle %>">+</button>
+  </form>
   </div>
