add style navbar and choice page

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,10 +15,13 @@
 
               <ul class="nav-list">
                 <li class="nav-item">
-                  <a href="/chat" class="nav-link">Chat</a>
+                  <a href="/chat" target="_blank" class="nav-link">Chat</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/text" class="nav-link">Text-Editor</a>
+                  <a href="/text" target="_blank" class="nav-link">Text-Editor</a>
+                </li>
+                <li class="nav-item">
+                  <a href="/todo" class="nav-link">Todo List</a>
                 </li>
               </ul>
             </nav>
